fix recaptcha size on mobile

--- a/react-app/src/components/LemmaForm/LemmaForm.css
+++ b/react-app/src/components/LemmaForm/LemmaForm.css
@@ -83,6 +83,15 @@ button.add {
   background-color: #f5f5f5;
 }
 
+@media screen and (max-width: 575px) {
+  .recaptcha {
+    transform: scale(0.77);
+    -webkit-transform: scale(0.77);
+    transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+  }
+}
+
 @media screen and (max-height: 575px) {
   #rc-imageselect,
   .g-recaptcha {
